--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,16 +4,23 @@
     box-sizing: border-box;
 }
 body {
+    margin: 0;
     font-family: 'Source Code Pro', monospace;
     background-color: #70b8ff;
     color: white;
 }
+.input-container {
+    display: inline-block;
+    margin-bottom: 10px;
+}
 .cube-map {
     display: grid;
-    height: 550px;
-    width: 550px;
+    max-height: 550px;
+    max-width: 550px;
+    height: calc(100vw - 10px);
+    width: calc(100vw - 10px);
     margin: auto;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 30px;
 }
 .cube-container {
@@ -32,7 +39,7 @@ main {
     text-align: center;
     margin: auto;
     margin-top: 40px;
-    width: 550px;
+    width: 100vw;
 }
 input {
     font-family: 'Source Code Pro', monospace;
